<resources>
    <string name="app_name">LEADERBOARD</string>
    <string name="todo">TODO</string>
    <string name="submit">Submit</string>
    <string name="skill_iq_leaders">Skill IQ Leaders</string>
    <string name="learning_leaders">Learning Leaders</string>
    <string name="hours_country">hours_country</string>
    <string name="learning_leader_name">learning_leader_name</string>
    <string name="scores_country">scores_country</string>
    <string name="skill_leader_name">skill_leader_name</string>
    <string name="project_submission">Project Submission</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="project_on_github_link">Project on GITHUB(link)</string>
    <string name="yes">Yes</string>
    <string name="are_you_sure">Are you sure ?</string>
    <string name="submission_successful">Submission Successful</string>
    <string name="submission_not_successful">Submission not successful</string>
</resources>