<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_orange_dark"
    tools:context=".ui.ProjectSubmission">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/project_submit_toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:background="@android:color/black"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/gad2Img"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/todo"
                android:scaleType="centerCrop"
                android:src="@drawable/gads2"
                app:layout_constraintBottom_toTopOf="@+id/textView3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="8dp"
                android:text="@string/project_submission"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@android:color/holo_orange_light"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/gad2Img"
                app:layout_constraintTop_toBottomOf="@+id/gad2Img" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="1dp"
        android:background="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/project_submit_toolbar"
        app:layout_constraintVertical_bias="0.0">


        <EditText
            android:id="@+id/first_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="60dp"
            android:autofillHints="First Name"
            android:background="@drawable/custom_edit_text"
            android:backgroundTint="@color/design_default_color_background"
            android:ems="8"
            android:hint="@string/first_name"
            android:inputType="text"
            android:isScrollContainer="true"
            android:maxLength="2000"
            android:maxLines="4"
            android:padding="12dp"
            app:layout_constraintBottom_toTopOf="@+id/email_address"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/last_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="60dp"
            android:autofillHints="Last Name"
            android:background="@drawable/custom_edit_text"
            android:backgroundTint="@color/design_default_color_on_primary"
            android:ems="8"
            android:hint="@string/last_name"
            android:inputType="text"
            android:isScrollContainer="true"
            android:maxLength="2000"
            android:maxLines="4"
            android:padding="12dp"
            app:layout_constraintBottom_toTopOf="@+id/email_address"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/first_name"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/email_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="8dp"
            android:autofillHints="Email Address"
            android:background="@drawable/custom_edit_text"
            android:backgroundTint="@color/design_default_color_background"
            android:ems="10"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/first_name" />

        <EditText
            android:id="@+id/git_hub_link"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="10dp"
            android:autofillHints=""
            android:background="@drawable/custom_edit_text"
            android:backgroundTint="@color/design_default_color_background"
            android:ems="10"
            android:hint="@string/project_on_github_link"
            android:inputType="text"
            android:padding="15dp"
            android:text=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_address" />

        <Button
            android:id="@+id/google_form_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="110dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="110dp"
            android:layout_marginBottom="74dp"
            android:background="@drawable/custom_button2"
            android:padding="15dp"
            android:text="@string/submit"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/git_hub_link" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>