<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".ui.learning_skill_IQ_leaders">

  <androidx.appcompat.widget.Toolbar
      android:id="@+id/project_submit_toolbar"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:background="@android:color/black"
      app:layout_constraintBottom_toTopOf="@+id/recyclerView"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="1.0"
      android:elevation="4dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

      <TextView
          android:id="@+id/textView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="16dp"
          android:layout_marginEnd="@android:dimen/notification_large_icon_height"
          android:text="@string/app_name"
          android:textColor="@android:color/white"
          android:textSize="18sp"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toStartOf="@+id/submit_project_button"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

      <Button
          android:id="@+id/submit_project_button"
          android:layout_width="120dp"
          android:layout_height="30dp"
          android:layout_marginEnd="16dp"
          android:background="@drawable/custom_button"
          android:text="@string/submit"
          android:textAppearance="@style/TextAppearance.AppCompat.Body1"
          android:textColor="@android:color/black"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toEndOf="@+id/textView"
          app:layout_constraintTop_toTopOf="parent" />

      <TextView
          android:id="@+id/learning_leaders"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="18dp"
          android:layout_marginEnd="20dp"
          android:text="@string/learning_leaders"
          android:textColor="@android:color/white"
          android:textSize="18sp"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toStartOf="@+id/skill_iq_leaders"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/textView"
          app:layout_constraintVertical_bias="1.0" />

      <TextView
          android:id="@+id/skill_iq_leaders"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="32dp"
          android:layout_marginTop="15dp"
          android:layout_marginEnd="56dp"
          android:text="@string/skill_iq_leaders"
          android:textColor="@android:color/white"
          android:textSize="18sp"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toEndOf="@+id/learning_leaders"
          app:layout_constraintTop_toBottomOf="@+id/submit_project_button" />


    </androidx.constraintlayout.widget.ConstraintLayout>

  </androidx.appcompat.widget.Toolbar>

  <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/recyclerView"
      android:layout_width="0dp"
      android:layout_height="0dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/project_submit_toolbar" />


</androidx.constraintlayout.widget.ConstraintLayout>